--- a/readme
+++ b/readme
@@ -1,1 +1,5 @@
-Collection of public domain libraries and umka utilities.
+coulau
+------
+
+Colau is a collection of umka libraries and utilities. Everything here is in
+the public domain.
