--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 coulau
 ------
 
-Colau is a collection of umka libraries and utilities. Everything here is in
+Coulau is a collection of umka libraries and utilities. Everything here is in
 the public domain.
